pequeña resolucion en los input del form del index

--- a/index.html
+++ b/index.html
@@ -72,46 +72,46 @@
                         <label for="inputEmail3" class="col-6 col-form-label labelForm">Nombre:</label>
                         <label for="inputEmail3" class="col-6 col-form-label labelForm">Apellido:</label>
                         <div class="col-6">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="">
+                            <input type="text" class="form-control" id="inputEmail3" placeholder="">
                         </div>
                         <div class="col-6">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="">
+                            <input type="text" class="form-control" id="inputEmail3" placeholder="">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="inputPassword3" class="col-12 col-form-label labelForm">Dirección:</label>
                         <div class="col-12">
-                            <input type="email" class="form-control" id="inputEmail3">
+                            <input type="text" class="form-control" id="inputEmail3">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="inputPassword3" class="col-12 col-form-label labelForm">Nº Celular:</label>
                         <div class="col-12">
-                            <input type="email" class="form-control" id="inputEmail3">
+                            <input type="text" class="form-control" id="inputEmail3">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="inputPassword3" class="col-6 col-form-label labelForm">Marca del equipo:</label>
                         <label for="inputPassword3" class="col-6 col-form-label labelForm">Modelo del equipo:</label>
                         <div class="col-6">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="Ej: Drean">
+                            <input type="text" class="form-control" id="inputEmail3" placeholder="Ej: Drean">
                         </div>
                         <div class="col-6">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="Ej: Next 8.12">
+                            <input type="text" class="form-control" id="inputEmail3" placeholder="Ej: Next 8.12">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="inputPassword3" class="col-12 col-form-label labelForm">Descripción de la
                             Falla:</label>
                         <div class="col-12">
-                            <input type="email" class="form-control" id="inputEmail3">
+                            <input type="text" class="form-control" id="inputEmail3">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="inputPassword3" class="col-12 col-form-label labelForm">Restricciones en el horario
                             para la vista:</label>
                         <div class="col-12">
-                            <input type="email" class="form-control" id="inputEmail3">
+                            <input type="text" class="form-control" id="inputEmail3">
                         </div>
                     </div>
                     <!-- 
