inclusion de algo de SEO

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactenos y a la brevedad repararemos su equipo">
+    <meta name="keywords" content="contacto service lavarropas, contacto service lavavajillas, contacto service, atencion service, atencion service lavarropas">
+    <link rel="shortcut icon" href="../images/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../images/favicon.png">
-    <title>Service Drean Cordoba</title>
+    <title>Contacto con Service Drean Cordoba</title>
 </head>
 
 <body class="gridIndex">
@@ -68,7 +70,7 @@
         </section>
         <section class="seccionContacto--R">
             <h3 class="h3dir">
-                <img src="../images/iconos/gmaps-pin.png" alt="icono pin gmaps">
+                <img src="../images/iconos/gmaps-pin.png" alt="icono pin google maps">
                 Dirección: Jose Guardado 567
             </h3>
             <iframe class="gmaps"
