--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Breve Descripcion acerca de nuestra empresa y valores focalizados en la atencion y la entera experiencia del cliente">
+    <meta name="keywords" content="acerca de, historia soluciones service, historia reparaciones, acerca de soluciones service">
+    <link rel="shortcut icon" href="../images/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../images/favicon.png">
-    <title>Service Drean Cordoba</title>
+    <title>Service Drean Cordoba, quienes somos?</title>
 </head>
 
 <body class="gridIndex">
