--- a/pages/reparaciones.html
+++ b/pages/reparaciones.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="../style/style.css">
+    <meta name="description" content="Distintas reparaciones a realizar en su lavarropas/lavavajillas">
+    <meta name="keywords" content="reparaciones, reparaciones lavarropas, reparaciones lavavajillas, sistema de rodamientos, fuentes electrónicas, sistema de amortiguación">
     <link rel="shortcut icon" href="../images/favicon.png">
-    <title>Service Drean Cordoba</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="../style/style.css">
+    <title>Reparaciones de Service Drean Córdoba</title>
 </head>
 
 <body class="gridIndex">
