--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Service Drean Cordoba. Reparamos Todas las marcas. Repuestos originales. Recibimos todas las tarjetas. Reparaciones en su domicilio.">
+    <meta name="keywords" content="reparacion lavarropas, reparacion lavavajillas, repuestos originales, servicio tecnico lavarropas, servicio tecnico lavavajillas">
+    <link rel="shortcut icon" href="./images/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="shortcut icon" href="./images/favicon.png">
     <title>Service Drean Cordoba</title>
 </head>
 
