--- a/pages/referencias.html
+++ b/pages/referencias.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Clientes contentos con nuestros trabajos">
+    <meta name="keywords" content="cliente satisfecho, cliente, cliente contento, acuerdo, reparado, lavarropas reparado, lavavajillas reparado">
+    <link rel="shortcut icon" href="../images/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../images/favicon.png">
-    <title>Service Drean Cordoba</title>
+    <title>Referencias de Service Drean Cordoba</title>
 </head>
 
 <body class="gridIndex">
