modifico ids del form del index para mejorar accesibilidad

--- a/index.html
+++ b/index.html
@@ -71,49 +71,49 @@
             <div class="container-fluid primeraSeccion__div__form">
                 <form>
                     <div class="row mb-3">
-                        <label for="inputEmail3" class="col-6 col-form-label labelForm">Nombre:</label>
-                        <label for="inputEmail3" class="col-6 col-form-label labelForm">Apellido:</label>
+                        <label for="inputName" class="col-6 col-form-label labelForm">Nombre:</label>
+                        <label for="inputName2" class="col-6 col-form-label labelForm">Apellido:</label>
                         <div class="col-6">
-                            <input type="text" class="form-control" id="inputEmail3" placeholder="">
+                            <input type="text" class="form-control" id="inputName1" placeholder="">
                         </div>
                         <div class="col-6">
-                            <input type="text" class="form-control" id="inputEmail3" placeholder="">
+                            <input type="text" class="form-control" id="inputName2" placeholder="">
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="inputPassword3" class="col-12 col-form-label labelForm">Dirección:</label>
+                        <label for="inputAddress" class="col-12 col-form-label labelForm">Dirección:</label>
                         <div class="col-12">
-                            <input type="text" class="form-control" id="inputEmail3">
+                            <input type="text" class="form-control" id="inputAddress">
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="inputPassword3" class="col-12 col-form-label labelForm">Nº Celular:</label>
+                        <label for="inputPhone" class="col-12 col-form-label labelForm">Nº Celular:</label>
                         <div class="col-12">
-                            <input type="text" class="form-control" id="inputEmail3">
+                            <input type="text" class="form-control" id="inputPhone">
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="inputPassword3" class="col-6 col-form-label labelForm">Marca del equipo:</label>
-                        <label for="inputPassword3" class="col-6 col-form-label labelForm">Modelo del equipo:</label>
+                        <label for="inputText" class="col-6 col-form-label labelForm">Marca del equipo:</label>
+                        <label for="inputText2" class="col-6 col-form-label labelForm">Modelo del equipo:</label>
                         <div class="col-6">
-                            <input type="text" class="form-control" id="inputEmail3" placeholder="Ej: Drean">
+                            <input type="text" class="form-control" id="inputText" placeholder="Ej: Drean">
                         </div>
                         <div class="col-6">
-                            <input type="text" class="form-control" id="inputEmail3" placeholder="Ej: Next 8.12">
+                            <input type="text" class="form-control" id="inputText2" placeholder="Ej: Next 8.12">
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="inputPassword3" class="col-12 col-form-label labelForm">Descripción de la
+                        <label for="inputText3" class="col-12 col-form-label labelForm">Descripción de la
                             Falla:</label>
                         <div class="col-12">
-                            <input type="text" class="form-control" id="inputEmail3">
+                            <input type="text" class="form-control" id="inputText3">
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label for="inputPassword3" class="col-12 col-form-label labelForm">Restricciones en el horario
+                        <label for="inputText4" class="col-12 col-form-label labelForm">Restricciones en el horario
                             para la vista:</label>
                         <div class="col-12">
-                            <input type="text" class="form-control" id="inputEmail3">
+                            <input type="text" class="form-control" id="inputText4">
                         </div>
                     </div>
                     <!-- 
