leve arreglo en el form para mejorar accesibilidad

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <label for="inputName" class="col-6 col-form-label labelForm">Nombre:</label>
                         <label for="inputName2" class="col-6 col-form-label labelForm">Apellido:</label>
                         <div class="col-6">
-                            <input type="text" class="form-control" id="inputName1" placeholder="">
+                            <input type="text" class="form-control" id="inputName" placeholder="">
                         </div>
                         <div class="col-6">
                             <input type="text" class="form-control" id="inputName2" placeholder="">
