Correcciones menores varias, agregado de algunos detalles esteticos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,12 +10,12 @@
     <link rel="shortcut icon" href="../images/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Contacto con Service Drean Cordoba</title>
+    <title>Contacto con Service Drean Córdoba</title>
 </head>
 
 <body class="gridIndex">
     <header>
-        <p class="pHeader">Service Drean Cordoba</p>
+        <h6 class="pHeader">Service Drean Córdoba</h6>
     </header>
     <nav class="nav1" data-aos="fade-down">
 
@@ -50,7 +50,7 @@
     <main class="mainContacto">
         <section class="seccionContacto--L">
             <div class="divContacto">
-                <h2 class="textContacto">Telefonos de contacto</h2>
+                <h1 class="h1Contacto textContacto">Teléfonos de contacto</h1>
                 <p class="textContacto">Horarios de atención: Lunes a Viernes de 9:30h a 18h.</p>
             </div>
             <div class="divContacto">
@@ -71,7 +71,7 @@
         <section class="seccionContacto--R">
             <h3 class="h3dir">
                 <img src="../images/iconos/gmaps-pin.png" alt="icono pin google maps">
-                Dirección: Jose Guardado 567
+                Dirección: José Guardado 567
             </h3>
             <iframe class="gmaps"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13613.982981627283!2d-64.19724019452433!3d-31.45554634167844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2fe3938f30f%3A0x4ab384d2aa3da81d!2sService%20Drean%20C%C3%B3rdoba%20Lavarropas%20y%20lavavajillas!5e0!3m2!1sen!2sar!4v1667174852021!5m2!1sen!2sar"
