--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -10,12 +10,12 @@
     <link rel="shortcut icon" href="../images/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Service Drean Cordoba, quienes somos?</title>
+    <title>Service Drean Córdoba ¿quienes somos?</title>
 </head>
 
 <body class="gridIndex">
     <header>
-        <p class="pHeader">Service Drean Cordoba</p>
+        <h6 class="pHeader">Service Drean Córdoba</h6>
     </header>
     <nav class="nav1" data-aos="fade-down">
 
@@ -53,7 +53,7 @@
             <section class="nosotros--R">
                 <h2 class="h2Nosotros">Soluciones Service / Service Drean Córdoba</h2>
                 <p class="pNosotros">Somos un service de lavarropas especializado. Reparamos tanto lavarropas como
-                    lavavajillas de todas las marcas, centrandonos tanto en la calidad de nuestro trabajo técnico, como
+                    lavavajillas de todas las marcas, centrándonos tanto en la calidad de nuestro trabajo técnico, como
                     en el servicio de atención al cliente personalizado.</p>
             </section>
 
@@ -61,7 +61,7 @@
                 <article class="mision">
                     <h2 class="h2Nosotros">Misión</h2>
                     <p class="pNosotros">Destacarnos en materia de reparaciones, brindando una solución integral desde
-                        el contacto del cliente, hasta la instalacion del equipo funcionando completamente en el
+                        el contacto del cliente, hasta la instalación del equipo funcionando completamente en el
                         domicilio.</p>
                 </article>
                 <article class="vision">
