--- a/pages/referencias.html
+++ b/pages/referencias.html
@@ -12,12 +12,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Referencias de Service Drean Cordoba</title>
+    <title>Referencias de Service Drean Córdoba</title>
 </head>
 
 <body class="gridIndex">
     <header>
-        <p class="pHeader">Service Drean Cordoba</p>
+        <h6 class="pHeader">Service Drean Córdoba</h6>
     </header>
     <nav class="nav1" data-aos="fade-down">
 
@@ -51,7 +51,7 @@
 
     <main class="mainReferencias">
         <div class="refTitle">
-            <h2 class="h2Referencias">Algunos clientes conformes en nuestros 30 años de experiencia</h2>
+            <h1 class="h1Referencias">Algunos clientes conformes en nuestros 30 años de experiencia</h1>
         </div>
         <section class="container refContainer">
             <div class="row justify-content-center">
