--- a/pages/reparaciones.html
+++ b/pages/reparaciones.html
@@ -15,7 +15,7 @@
 
 <body class="gridIndex">
     <header>
-        <p class="pHeader">Service Drean Cordoba</p>
+        <h6 class="pHeader">Service Drean Córdoba</h6>
     </header>
 
     <nav class="nav1" data-aos="fade-down">
@@ -52,7 +52,7 @@
 
         <section class="grid">
             <article class="fila1">
-                <h2 class="titleCenterRep h2Rep">Reparaciones y averías mas comunes</h2>
+                <h1 class="titleCenterRep h1Rep">Reparaciones y averías mas comunes</h1>
                 <p class="pReparaciones">Contamos con un equipo especializado de tecnicos, tanto mecánicos como
                     electrónicos para poder abarcar todo tipo de reparaciones.</p>
             </article>
