--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
-    <title>Service Drean Cordoba</title>
+    <title>Service Drean Córdoba</title>
 </head>
 
 <body class="gridIndex">
 
     <header>
-        <p class="pHeader">Service Drean Cordoba</p>
+        <h6 class="pHeader">Service Drean Córdoba</h6>
     </header>
 
     <nav class="nav1" data-aos="fade-down">
@@ -60,15 +60,16 @@
 
             <div class="primeraSeccion__div">
                 <ul class="primeraSeccion__div__lista">
-                    <li>Service autorizado en Córdoba</li>
-                    <li>Trabajos con garantía por escrito</li>
-                    <li>Repuestos originales</li>
-                    <li>Reparaciones en su domicilio</li>
-                    <li>Recibimos todas las tarjetas</li>
+                    <li>Service autorizado en Córdoba.</li>
+                    <li>Trabajos con garantía por escrito.</li>
+                    <li>Repuestos originales.</li>
+                    <li>Reparaciones en su domicilio.</li>
+                    <li>Recibimos todas las tarjetas.</li>
                 </ul>
             </div>
 
             <div class="container-fluid primeraSeccion__div__form">
+                <h2 class="formtitle">Rellene el formulario para un contacto <b class="emph">rápido</b>:</h2>
                 <form>
                     <div class="row mb-3">
                         <label for="inputName" class="col-6 col-form-label labelForm">Nombre:</label>
@@ -104,14 +105,14 @@
                     </div>
                     <div class="row mb-3">
                         <label for="inputText3" class="col-12 col-form-label labelForm">Descripción de la
-                            Falla:</label>
+                            falla:</label>
                         <div class="col-12">
                             <input type="text" class="form-control" id="inputText3">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="inputText4" class="col-12 col-form-label labelForm">Restricciones en el horario
-                            para la vista:</label>
+                            para la visita:</label>
                         <div class="col-12">
                             <input type="text" class="form-control" id="inputText4">
                         </div>
