--- a/pages/referencias.html
+++ b/pages/referencias.html
@@ -19,7 +19,8 @@
     <header>
         <h6 class="pHeader">Service Drean Córdoba</h6>
     </header>
-    <nav class="nav1" data-aos="fade-down">
+
+    <nav class="navg nav1" data-aos="fade-down">
 
         <div class="hijoNav1">
             <a href="../index.html"><img src="../images/logos/drean-seeklogo.com-reducido.png" alt="logo drean"></a>
@@ -27,7 +28,7 @@
         </div>
     </nav>
 
-    <nav class="nav2" data-aos="fade-down">
+    <nav class="navg nav2" data-aos="fade-down">
         <ul class="hijonav2">
 
 
@@ -47,6 +48,35 @@
                 <a href="./contacto.html">Contacto</a>
             </li>
         </ul>
+    </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light nav3">
+        <div class="container-fluid">
+            <a class="navbar-brand reseta" href="../index.html"><img src="../images/logos/drean-seeklogo.com-reducido.png" alt="logo drean"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active colora borde1st" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link active colora" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active colora" href="./reparaciones.html">Reparaciones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active colora" href="./referencias.html" tabindex="-1" aria-disabled="true">Referencias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active colora borderLast" href="./contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <main class="mainReferencias">
