--- a/pages/reparaciones.html
+++ b/pages/reparaciones.html
@@ -9,7 +9,8 @@
     <meta name="keywords" content="reparaciones, reparaciones lavarropas, reparaciones lavavajillas, sistema de rodamientos, fuentes electrónicas, sistema de amortiguación">
     <link rel="shortcut icon" href="../images/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    <link rel="stylesheet" href="../style/style.css">
     <title>Reparaciones de Service Drean Córdoba</title>
 </head>
 
@@ -18,7 +19,7 @@
         <h6 class="pHeader">Service Drean Córdoba</h6>
     </header>
 
-    <nav class="nav1" data-aos="fade-down">
+    <nav class="navg nav1" data-aos="fade-down">
 
         <div class="hijoNav1">
             <a href="../index.html"><img src="../images/logos/drean-seeklogo.com-reducido.png" alt="logo drean"></a>
@@ -26,7 +27,7 @@
         </div>
     </nav>
 
-    <nav class="nav2" data-aos="fade-down">
+    <nav class="navg nav2" data-aos="fade-down">
         <ul class="hijonav2">
 
 
@@ -46,6 +47,35 @@
                 <a href="./contacto.html">Contacto</a>
             </li>
         </ul>
+    </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light nav3">
+        <div class="container-fluid">
+            <a class="navbar-brand reseta" href="../index.html"><img src="../images/logos/drean-seeklogo.com-reducido.png" alt="logo drean"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active colora borde1st" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link active colora" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active colora" href="./reparaciones.html">Reparaciones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active colora" href="./referencias.html" tabindex="-1" aria-disabled="true">Referencias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active colora borderLast" href="./contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <main class="mainReparaciones">
@@ -133,6 +163,9 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
+    </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
 </body>
 
