mejorado de links whatsapp y facebook

--- a/pages/referencias.html
+++ b/pages/referencias.html
@@ -171,7 +171,7 @@
 
         <section class="footerR">
             <div class="red1">
-                <a href="https://facebook.com" target="_blank">
+                <a href="https://www.facebook.com/Solucionesservice/" target="_blank">
                     <img src="../images/iconos/fbblanco.svg" alt="icono facebook">
                 </a>
             </div>
@@ -181,7 +181,7 @@
                 </a>
             </div>
             <div class="red3">
-                <a href="https://web.whatsapp.com/" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=5493513032129&" target="_blank">
                     <img src="../images/iconos/wpblanco.svg" alt="icono whatsapp">
                 </a>
             </div>
