--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Service Drean Cordoba. Reparamos Todas las marcas. Repuestos originales. Recibimos todas las tarjetas. Reparaciones en su domicilio.">
-    <meta name="keywords" content="reparacion lavarropas, reparacion lavavajillas, repuestos originales, servicio tecnico lavarropas, servicio tecnico lavavajillas">
+    <meta name="description"
+        content="Service Drean Cordoba. Reparamos Todas las marcas. Repuestos originales. Recibimos todas las tarjetas. Reparaciones en su domicilio.">
+    <meta name="keywords"
+        content="reparacion lavarropas, reparacion lavavajillas, repuestos originales, servicio tecnico lavarropas, servicio tecnico lavavajillas">
     <link rel="shortcut icon" href="./images/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -53,7 +55,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav3">
         <div class="container-fluid">
-            <a class="navbar-brand reseta" href="./index.html"><img src="./images/logos/drean-seeklogo.com-reducido.png" alt="logo drean"></a>
+            <a class="navbar-brand reseta" href="./index.html"><img src="./images/logos/drean-seeklogo.com-reducido.png"
+                    alt="logo drean"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -70,10 +73,12 @@
                         <a class="nav-link active colora" href="./pages/reparaciones.html">Reparaciones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active colora" href="./pages/referencias.html" tabindex="-1" aria-disabled="true">Referencias</a>
+                        <a class="nav-link active colora" href="./pages/referencias.html" tabindex="-1"
+                            aria-disabled="true">Referencias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active colora borderLast" href="./pages/contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+                        <a class="nav-link active colora borderLast" href="./pages/contacto.html" tabindex="-1"
+                            aria-disabled="true">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -158,9 +163,12 @@
                     -->
                     <div class="row justify-content-center">
                         <div class="col">
-                            <button type="submit" class="btn btn-primary botonForm">Contactanos!<img
-                                    src="./images/iconos/icons8-whatsapp.svg" alt="logo whatsapp"
-                                    class="imgBotonForm"></button>
+                            <a href="https://api.whatsapp.com/send?phone=5493513032129&text=Hola!%20me%20gustaría%20agendar%20un%20turno
+                            " target="_blank">
+                                <button type="button" class="btn btn-primary botonForm">
+                                    Contactanos!<img src="./images/iconos/icons8-whatsapp.svg" alt="logo whatsapp" class="imgBotonForm">
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </form>
@@ -201,7 +209,7 @@
 
         <section class="footerR">
             <div class="red1">
-                <a href="https://facebook.com" target="_blank">
+                <a href="https://www.facebook.com/Solucionesservice/" target="_blank">
                     <img src="./images/iconos/fbblanco.svg" alt="icono facebook">
                 </a>
             </div>
@@ -211,7 +219,7 @@
                 </a>
             </div>
             <div class="red3">
-                <a href="https://web.whatsapp.com/" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=5493513032129&" target="_blank">
                     <img src="./images/iconos/wpblanco.svg" alt="icono whatsapp">
                 </a>
             </div>
